stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__error_invalid_stacks_transaction_duplicate_contract.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "ba0dcdf3b41fc05a4e007dbbddb4be6f5b10ab45e1be242f160581ef26a2fd4d",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-name, code_body: [..], clarity_version: None)",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 35,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8817,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 35,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8817,
    ),
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 4dbcbe8e516b005910f02a1ebf5e61078bc5e250c6988cc43fccb5723d2ec57a: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 8d5017f0d8f47be4860f3aaeb3490d22f0d1c02f9b856d89ea6090fec2dc92e5: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block d703abc0bcdf007a09957286125bafddedd2c2d26a7a0ebdacdcaa71d5deb32a: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 6d875a8454f8a753e8895a1119a4a1dc24e159596cd416cac6e5bfd5681bf35f: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch34,
    error: "Invalid Stacks block 29f13f66d6ef7bd8e176102403d4e519283c73ba2606e6a38f627e84aac85524: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Stacks block f61fb0c66e50654ffcc78610d5730e59c9743b3bf7b18119071947a99720c28b: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Stacks block 4e769d32720c02c1dc70aa2ee06f00580aa31fb74f62a41aa352afc3056bbab6: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Stacks block a75d450fb88f02b8a08f35ca7143575426e390cb0eb9d54b8855285b4ddaba56: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Stacks block 803672efd418423a289debd5b6fbbf2a2b0cc0edcb43e06e66e88817e9e237ff: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Stacks block af0c7fb9f1f7b2f489eea958fd374035b532ecfd6df8473e7857b3a4c388b916: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch40,
    error: "Invalid Stacks block 72066a2283df57cfd3062271a357f90bf610ac32f2de7a41be98933e7dcc1ab5: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)",
  )),
]
