stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_analysis_error_incompatible_trait.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "1a93804dc742a3f03d31684ac4548229f31c5d375a3426fd96cdcebd7d645e91",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'<ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity1.trait-2>\', found \'<ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity1.trait-1>\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10728,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10728,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "077f2e58b7d899f0ae06b675f3cae7209e0d7c67144d2220aec1e30d1a5590f4",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity2.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity2.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6e0c426707d05d4b770e487d836b9f56da67239a9693db77d7f1c5605e9a3ead",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity3.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity3.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ccc4a7402c9aa8f7db5ad4a8719465e83eb21c7e33faecee0f25c30ac2966cce",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity4.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_3-Clarity4.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
]
