stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_analysis_error_no_such_map.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "e98fcb2f30a5cca370fc492fca335c2094657af7c8229458cf187a26f82b8bbf",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-map-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved map \'non-existent\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1406,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1406,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2e60017ad42ef0c335699107b71612755451d95258bc0b07c9cf6ac6663cf3b9",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-map-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved map \'non-existent\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1406,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1406,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3c2493928bbe73bf44a80cd72a68e265381c5cb777b6ac6dcc0f686d9dfffb5c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-map-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of unresolved map \'non-existent\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1406,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1406,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f90b3a977860c34f8ba95f7f5187bc447fe8ed4416b5ae354590c9f66b1b16a6",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-map-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of unresolved map \'non-existent\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1406,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1406,
    ),
  )),
]
